fixed overflow

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -5,7 +5,7 @@
 
 @layer components {
   .container {
-    @apply max-w-[1440px] mx-auto;
+    @apply md:max-w-[1440px] mx-auto;
   }
 }
 
@@ -15,6 +15,7 @@ body {
   font-family: "Syne", sans-serif;
   color: #5bbfd6ad;
   overflow-x: hidden;
+  
 }
 
 .luz-curso {
